# swagger.yaml
@@ -13,6 +13,44 @@ basePath: '/student-mgmt-services/service'
 schemes:
   - http
 paths:
+
+  /students/student-summaries:
+    get:
+      tags:
+        - read
+      summary: Service for searching students.
+      description: Search students.
+      operationId: getStudentSummaries
+      produces:
+        - application/json
+      parameters:
+        - name: Correlation-ID
+          in: header
+          type: string
+          required: false
+          description: |
+            A string identifier used for troubleshooting.
+            * If not provided, it will be generated.
+        - name: grade
+          in: query
+          type: string
+          required: false
+          description: |
+            The filter for grade name.
+        - name: section
+          in: query
+          type: string
+          required: false
+          description: |
+            The filter for grade section.
+      responses:
+        '200':
+          description: Success.
+          schema:
+            $ref: '#/definitions/StudentSummaries'
+        '500':
+          description: Internal Service Error.  An unexpected error occurred.
+
   /students/{id}:
     get:
       tags:
@@ -75,7 +113,41 @@ paths:
           description: Success.
         '500':
           description: Internal Service Error.  An unexpected error occurred.
+
 definitions:
+  StudentSummaries:
+    type: object
+    required:
+      - students
+    properties:
+      students:
+        type: array
+        items: 
+          $ref: '#/definitions/StudentSummary'
+
+  StudentSummary:
+    type: object
+    required:
+      - id
+      - name
+      - grade
+    properties:
+      id:
+        type: string
+        description: |
+          The unique identifier of a student. This field will never be blank.
+        example: 135
+      name:
+        type: string
+        description: |
+          The name of the student. This field will never be blank.
+        example: Rajesh
+      grade:
+        type: string
+        description: |
+          The name of the grade.
+        example: First
+
   Student:
     type: object
     required:
@@ -126,7 +198,7 @@ definitions:
         description: |
           The section of a given grade.
         example: A
-  
+
   AdditionalInformation:
     type: object
     required:
